--- a/teacher.html
+++ b/teacher.html
@@ -10,8 +10,8 @@
         <form id="form" onsubmit="event.preventDefault()">
             <h1>Enter your lesson details below</h1>
             <input id="date" type="type" name="name" value="" placeholder="Lesson Date DD/MM/YY">
-            <input id="year" type="text" name="name" value="" placeholder="Year group">
-            <input id="class" type="text" name="name" value="" placeholder="Class">
+            <input id="class" type="text" name="name" value="" placeholder="Enter class code">
+            <h2>Enter the learning objectives for the class</h2>
             <input class="lo" id="lo1" type="text" name="name" value="" placeholder="Learning objective 1">
             <input class="lo" id="lo2" type="text" name="name" value="" placeholder="Learning objective 2">
             <button id="submit" type="submit">Submit</button>
